--- a/project/iteration1/Makefile
+++ b/project/iteration1/Makefile
@@ -4,7 +4,7 @@
 # to building and testing the whole project, which requires running
 # make in subdirectories.
 
-.PHONY: proj01 docs clean
+.PHONY: proj01 unittest docs clean
 
 # Build everything that can be built for this project
 all: proj01
@@ -16,8 +16,13 @@ proj01:
 # Build docs/html, docs/latex by running doxygen in the project's docs directory
 docs:
 	@doxygen docs/Doxyfile
-	@open docs/html/index.html
+	@xdg-open docs/html/index.html
+
+# Build the bin/unittest executable by running make in the project's tests directory
+unittest:
+	$(MAKE) -C tests all
 
 # Clean everything that has been for a fresh start
 clean:
 	$(MAKE) -C src clean
+	$(MAKE) -C tests clean
